<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_add"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:text="@string/question_header"
                android:padding="5dp"
                android:theme="@style/TextHeaderTheme"/>
            <TextView
                android:id="@+id/text_query"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="30dp"
                android:padding="4dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_by"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/response"
                android:padding="5dp"
                android:theme="@style/TextHeaderTheme"/>

            <TextView
                android:id="@+id/text_response"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:textSize="16sp" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/text_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_input_layout"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_input_layout"
        android:layout_margin="10dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/button_add_description"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_add"
        app:layout_constraintBottom_toBottomOf="@id/button_add"
        android:layout_margin="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_send"
        android:hint="@string/enter_query"
        android:padding="3dp">

        <!--android:maxLength="13"-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:imeOptions="actionSend"/>

    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>